@@ -128,5 +128,6 @@ v1.4
 - Improved commandline tool
 - Make order of the extracted fields stable (Set --> List)
 - Fail when asking for a field that cannot be extracted
+- Fixed stackoverflow (infinite recursion) in specific parse situations.
 
 
